-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.6
-
None
-
b395b1ea7 (dev), 32381f70d (6.6)
Slice view in QtGraphs is too small. See the difference between QtGrpahs and QtDataVisualization.
- is required for
-
QTBUG-114463 Match or exceed the visual quality of QtDataVisualization
-
- Closed
-
For Gerrit Dashboard: QTBUG-114120 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
495689,3 | Fix slice view size | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
496686,2 | Fix slice view size | 6.6 | qt/qtgraphs | Status: MERGED | +2 | 0 |