Fix slice view size

Fixes: QTBUG-114120
Change-Id: I5536c3466d9ae4639397b5690bcc70153d281635
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit b395b1ea72b7dc779d4899eecac1f001d416aea7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>